# server-monitor

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yaml
.sqlx/: query-1d74984315c029fbbffd7efc3837284212ec8d8178e78a55974533273c3b9e1d.json  query-38568b8599dbb426f040f964d726bbb61bf5f5a01953708d3ad7909df8ee546f.json  query-60ff9aaf7f741c9d2f554f6035c4e1514b16df43d0e1a23f505caee1865ddc0f.json  query-6da50b88a7d60fc72fc4659deddfe748acafc346d9e689bde5092be00f7c002d.json  query-736ce4455ff6002c0f4349517021103fedbbde0245b95f0aa138ec732f07c790.json  query-7ba3c6b8987d76874207dd6d0b1b584c1ec31c2158f8e4b09fac19f3419fbd3a.json  query-afdf49038ea6eb30c24c9cf889fce9e7c19443fd63b948b6946cc033af071791.json  query-dcbd9ec51c7b274513dcf2329e6d6cd8f86014d702fde9cc232c335fe48ed4d4.json  query-e6a645dfa12a2edcf7377e27cb595edb75efb11c5e81ea6c0cadedffa81c7faf.json
migrations/: 20240522111159_endpoint.sql  20240522112029_incident.sql  20240524093211_metadata.sql  20240528190819_max_latency_field_to_endpoints.sql
src/: bot.rs  constants.rs  db.rs  main.rs  notify.rs  request.rs  status.rs
src/db/: db.rs  endpoint.rs  helpers.rs  incident.rs  metadata.rs  mod.rs  url.rs
